exports[`RelatedContent does not render without content 1`] = `
<section
  className="soft-half-sides@palm soft-double@palm-wide soft-top soft-half-bottom background--light-secondary">
  <div
    className="one-whole text-center">
    <h5
      className="flush soft-bottom" />
  </div>
  <div />
</section>
`;

exports[`RelatedContent has a title 1`] = `
<section
  className="soft-half-sides@palm soft-double@palm-wide soft-top soft-half-bottom background--light-secondary">
  <div
    className="one-whole text-center">
    <h5
      className="flush soft-bottom">
      This is a Title
    </h5>
  </div>
  <div />
</section>
`;

exports[`RelatedContent shows a loading state prior to content 1`] = `
<div
  className="one-whole text-center soft">
  <div
    className="loader_9h6gj"
    style={Object {}} />
</div>
`;
